# stratum

./: .gitignore  Cargo.toml  README.md  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: rust-ci.yml  rust-perf.yml
deploy/cloudflare/: Dockerfile  README.md  wrangler.jsonc
docs/: agent-workspace-demo.md  agent-workspace-positioning.md  cli-cloud-bridge.md  demo-readiness.md  execution-roadmap.md  filesystem-guide.md  getting-started.md  http-api-guide.md  lattice-v1.md  mcp-guide.md  project-status.md  semantic-index.md  stratum-v1.md  user-management.md  version-control.md
docs/plans/: 2026-04-29-session-token-scopes.md  2026-04-30-run-create-idempotency.md  2026-04-30-run-records.md  2026-04-30-run-status-api.md  2026-04-30-workspace-mounted-sessions.md  2026-05-01-approval-policy-foundation.md  2026-05-01-approval-workflow-hardening.md  2026-05-01-audit-event-scaffolding.md  2026-05-01-backend-adapter-scaffolding.md  2026-05-01-change-requests-protected-paths.md  2026-05-01-ci-foundation.md  2026-05-01-durable-backend-foundation.md  2026-05-01-file-metadata.md  2026-05-01-http-idempotency-coverage.md  2026-05-01-posix-fuse-xattrs.md  2026-05-01-review-feedback-foundation.md  2026-05-01-reviewer-assignment-foundation.md  2026-05-01-vcs-session-semantics.md  2026-05-02-backend-runtime-selection.md  2026-05-02-durable-cleanup-claims.md  2026-05-02-object-upload-staging.md  2026-05-02-postgres-idempotency-adapter-foundation.md  2026-05-02-postgres-metadata-adapter.md  2026-05-02-postgres-migration-harness.md  2026-05-02-postgres-migration-runner-foundation.md  2026-05-02-python-sdk-foundation.md  (+62 more)
scripts/: check-postgres-migrations.sh  check-pre-cutover-load-chaos.sh  check-r2-object-store.sh  ci-live-durable-cloud-gate.sh  ci-live-postgres-gate.sh  ci-live-r2-gate.sh
sdk/: package.json
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: live_workspace.py
sdk/python/src/stratum_sdk/: __init__.py  client.py  errors.py  http.py  paths.py  types.py
sdk/python/tests/: test_client.py  test_http.py  test_live_smoke.py  test_package.py  test_paths.py
site/: index.html
src/: audit.rs  codec.rs  config.rs  db.rs  error.rs  fuse_mount.rs  idempotency.rs  lib.rs  main.rs  persist.rs  posix.rs  review.rs  runs.rs  secret_replay.rs
tests/: perf_comparison.rs  server_startup.rs
web/: .gitignore  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
(+175 files in other folders)
