[package]
name = "stratum"
version = "1.0.0"
edition = "2024"

[[bin]]
name = "stratum"
path = "src/main.rs"

[[bin]]
name = "stratum-server"
path = "src/bin/stratum_server.rs"

[[bin]]
name = "stratum-mcp"
path = "src/bin/stratum_mcp.rs"

[[bin]]
name = "stratumctl"
path = "src/bin/stratumctl.rs"

[[bin]]
name = "stratum-mount"
path = "src/bin/stratum_mount.rs"
required-features = ["fuser"]

[dependencies]
sha2 = "0.10"
memmap2 = "0.9"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wincode = "0.1"
wincode = "0.4.9"
regex = "1"
glob = "0.3"
rustyline = "15"
thiserror = "2"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rmcp = { version = "1.4", features = ["server", "transport-io"] }
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rand = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
aws-config = "1"
aws-sdk-s3 = { version = "1", default-features = false, features = ["default-https-client", "http-1x", "rt-tokio", "sigv4a"] }
urlencoding = "2"
fuser = { version = "0.17.0", optional = true, default-features = false, features = ["abi-7-31", "macos-no-mount"] }

[features]
fuser = ["dep:fuser"]
