[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "stratum-sdk"
version = "0.0.0"
description = "Python SDK for the Stratum HTTP API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
license-files = ["LICENSE"]
dependencies = ["httpx>=0.27,<1"]

[project.optional-dependencies]
dev = ["pytest>=8", "mypy>=1.11", "ruff>=0.8", "build>=1.2"]

[tool.hatch.build.targets.wheel]
packages = ["src/stratum_sdk"]

[tool.hatch.build.targets.sdist]
include = ["src/stratum_sdk", "tests", "examples", "README.md", "LICENSE", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
